--- a/templates/index.html
+++ b/templates/index.html
@@ -22,10 +22,10 @@
             <nav class="flex items-center justify-between h-16" role="navigation" aria-label="Navegación principal">
                 <!-- Logo o nombre del sitio -->
                 <div class="flex items-center">
-                    <h1 class="text-2xl font-bold text-white">
+                    <a href="{{url_for('ini')}}" class="text-2xl font-bold text-white">
                         <i class="fas fa-chart-line mr-2"></i>
                         SRO
-                    </h1>
+                    </a>
                 </div>
 
                 <!-- Enlaces de navegación -->
@@ -46,6 +46,12 @@
                         <a href="{{url_for('porc')}}" class="text-gray-100 hover:text-white transition-colors duration-200 flex items-center">
                             <i class="fas fa-weight mr-2"></i>
                             Pesos
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{{url_for('reps')}}" class="text-gray-100 hover:text-white transition-colors duration-200 flex items-center">
+                            <i class="fa-regular fa-circle-user"></i>
+                            Representantes
                         </a>
                     </li>
                     <li>
@@ -89,6 +95,12 @@
                         <a href="{{url_for('porc')}}" class="text-gray-100 hover:text-white block transition-colors duration-200">
                             <i class="fas fa-weight mr-2"></i>
                             Pesos
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{{url_for('porc')}}" class="text-gray-100 hover:text-white block transition-colors duration-200">
+                            <i class="fa-regular fa-circle-user"></i>
+                            Representantes
                         </a>
                     </li>
                     <li>
