--- a/templates/config.html
+++ b/templates/config.html
@@ -15,12 +15,12 @@
     <div class="container mx-auto px-4">
         <nav class="flex items-center justify-between h-16" role="navigation" aria-label="Navegación principal">
             <!-- Logo o nombre del sitio -->
-            <div class="flex items-center">
-                <h1 class="text-2xl font-bold text-white">
-                    <i class="fas fa-chart-line mr-2"></i>
-                    SRO
-                </h1>
-            </div>
+                <div class="flex items-center">
+                    <a href="{{url_for('ini')}}" class="text-2xl font-bold text-white">
+                        <i class="fas fa-chart-line mr-2"></i>
+                        SRO
+                    </a>
+                </div>
 
             <!-- Enlaces de navegación -->
             <ul class="hidden md:flex space-x-8">
@@ -40,6 +40,12 @@
                     <a href="{{url_for('porc')}}" class="text-gray-100 hover:text-white transition-colors duration-200 flex items-center">
                         <i class="fas fa-weight mr-2"></i>
                         Pesos
+                    </a>
+                </li>
+                <li>
+                    <a href="{{url_for('reps')}}" class="text-gray-100 hover:text-white transition-colors duration-200 flex items-center">
+                        <i class="fa-regular fa-circle-user"></i>
+                        Representantes
                     </a>
                 </li>
                 <li>
@@ -83,6 +89,12 @@
                     <a href="{{url_for('porc')}}" class="text-gray-100 hover:text-white block transition-colors duration-200">
                         <i class="fas fa-weight mr-2"></i>
                         Pesos
+                    </a>
+                </li>
+                <li>
+                    <a href="{{url_for('porc')}}" class="text-gray-100 hover:text-white block transition-colors duration-200">
+                        <i class="fa-regular fa-circle-user"></i>
+                        Representantes
                     </a>
                 </li>
                 <li>
@@ -139,15 +151,19 @@
     <p class="font-bold">Parrila Original:</p>
     <p id="total1">Selecciona un periodo</p>
     <p id="fichero"></p>
+    <p id="ficheroD"></p>
     <p id="Parrilla"></p>
     <p id="Peri"></p>
+    <p id="Conge"></p>
   </div>
   <div class="bg-green-100 border-l-4 border-green-500 text-green-700 p-4 w-1/2 rounded shadow" id="resumen2">
     <p class="font-bold">Periodo 2:</p>
     <p id="total2">Selecciona un periodo</p>
     <p id="fichero2"></p>
+    <p id="ficheroD2"></p>
     <p id="Parrilla2"></p>
     <p id="Peri2"></p>
+    <p id="Conge2"></p>
   </div>
 </div>
 
